Update bio and fix spacings on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -85,7 +85,7 @@
 
   --color-text: var(--color-white-500);
   --color-text-action: var(--color-red);
-  --color-text-light: #8a67f4;
+  --color-text-light: var(--color-light-blue-600);
   --color-accent: #d1dce5;
 
   --background-color-lighter: var(--color-dark-blue-500);
@@ -228,8 +228,7 @@ li > ul {
 blockquote {
   color: var(--color-text-light);
   background-color: rgb(209 220 229 / 0.04);
-  margin-left: calc(-1 * var(--spacing-6));
-  margin-right: var(--spacing-8);
+
   padding: var(--spacing-3) var(--spacing-3) var(--spacing-3) var(--spacing-6);
   border-left: var(--spacing-1) solid var(--color-primary);
   font-size: var(--font-size-2);
@@ -260,7 +259,7 @@ table thead tr th {
 /* Link */
 
 a {
-  color: var(--color-text-highlight);
+  color: var(--color-text-light);
 }
 
 a:hover,
@@ -270,15 +269,8 @@ a:focus {
 
 /* Custom classes */
 strong, b { 
-  text-shadow: 1px 2px 8px rgb(0 188 212 / 0.3);
-}
-
-.gatsby-highlight :not(pre) > code[class*="language-"], .gatsby-highlight  pre[class*="language-"] {
-  border-radius: 4px;
-  background: var(--background-color) !important;
-  text-shadow: none !important;
-  border: none;
-  box-shadow: none;
+  text-shadow: 2px 2px var(--color-dark-blue-900);
+  font-weight: 800;
 }
 
 section[itemprop="articleBody"] ul, section[itemprop="articleBody"] ol {
@@ -355,7 +347,7 @@ section[itemprop="articleBody"] ul, section[itemprop="articleBody"] ol {
     "tags tags tags date"
     "body body body body";
 
-  padding-right: var(--spacing-20);  
+  padding-right: var(--spacing-16);  
 }
 
 .post-list-item:hover {
@@ -364,22 +356,29 @@ section[itemprop="articleBody"] ul, section[itemprop="articleBody"] ol {
 
 .bio {
   display: flex;
-  margin-bottom: var(--spacing-16);
+  align-items: center;
+  margin-bottom: var(--spacing-6);
 }
 
 .bio p {
-  margin-bottom: var(--spacing-0);
+  margin: 0 0 0 var(--spacing-6);
 }
 
 .bio-avatar {
   margin-right: var(--spacing-4);
   margin-bottom: var(--spacing-0);
-  min-width: 50px;
+  min-width: 80px;
+  min-height: 80px;
   border-radius: 100%;
+
+  z-index: -1;
 }
 
 .blog-post header h1 {
+  color: var(--color-header-primary);
+
   margin: var(--spacing-0) var(--spacing-0) var(--spacing-4) var(--spacing-0);
+
   border-image: linear-gradient(to left, var(--color-purple), var(--color-red)) 30;
   border-width: 0 0 3px 0;
   border-style: solid; 
@@ -391,13 +390,20 @@ section[itemprop="articleBody"] ul, section[itemprop="articleBody"] ol {
 }
 
 .blog-post-nav ul {
-  margin: var(--spacing-0);
+  margin: var(--spacing-10) 0 var(--spacing-6) 0; 
 }
 
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
 }
 
+.blog-post iframe {
+  margin: 0 auto var(--spacing-10) auto;
+  display: block;
+
+  max-width: 90%;
+  height: auto;
+}
 
 /* NEW LAYOUT */
 
@@ -492,7 +498,11 @@ nav.site-navigation {
 .global-wrapper {
   margin: calc(var(--font-size-6) * 2 - 100vh) auto var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) 0 var(--spacing-10) var(--spacing-20);
+  padding: var(--spacing-10) 0 var(--spacing-10) var(--spacing-16);
+}
+
+.blog-post {
+  padding-right: var(--spacing-16);
 }
 
 footer { 
@@ -503,9 +513,16 @@ footer {
   justify-content: space-evenly;
   align-items:center;
 
+  font-weight: 900;
+
+  color: var(--color-dark-blue-400);
+
   background-color: var(--color-dark-blue-900);
 }
 
+footer a {
+  color: var(--color-light-blue-600);
+}
 .gradient-background {
   position: sticky;
   top: 0;
@@ -515,7 +532,7 @@ footer {
   height: 100vh;
   margin: var(--spacing-0) auto;
   max-width: var(--maxWidth-wrapper);
-  padding: var(--spacing-10) var(--spacing-20);
+  padding: var(--spacing-10) var(--spacing-16);
 
   background: linear-gradient(var(--background-color-lighter) 60%, var(--background-color));
 }
@@ -559,7 +576,7 @@ footer {
   transition: all 250ms ease-in-out;
 }
 
-.main-header .main-heading:after {
+.main-heading:after {
   content: '';
   position: absolute;
   left: 0;
@@ -591,8 +608,9 @@ footer {
 
 @media (max-width: 42rem) {
   blockquote {
-    padding: var(--spacing-2) var(--spacing-4) var(--spacing-2) var(--spacing-4);
+    padding: var(--spacing-2) var(--spacing-4);
     margin-left: var(--spacing-0);
+    width: 100%;
   }
   ul,
   ol {
@@ -607,16 +625,49 @@ footer {
       padding: var(--spacing-1) 0 var(--spacing-1) var(--spacing-8);
     }
 
+    section[itemprop="articleBody"] {
+      text-align: justify;
+    }
+
+    h2, h3, h4 {
+      text-align: left;
+    }
+
+    .blog-post {
+      padding-right: var(--spacing-8);
+      padding-top:var(--spacing-4);
+    }
+
     .post-list-item {
       padding-right: var(--spacing-8);
     }
 
     .bio {
-      margin-bottom: var(--spacing-10);
+      margin: var(--spacing-2) var(--spacing-8) var(--spacing-1) 0;
+      margin-bottom: var(--spacing-4);
+      margin-right: var(--spacing-8);
     }
 
-    .site-navigation ul {
-      justify-content: space-evenly;
+    .bio:first-child {
+      margin-top: var(--spacing-8);
+    }
+
+    .main-heading:after {
+      top: 1px;
+      left: 1px;
+      width: 99%;
+    }
+
+    .site-navigation {
+      display: none;
+    }
+
+    header.main-header {
+      padding: 0;
+    }
+
+    .main-heading {
+      margin: var(--spacing-2) auto;
     }
     .gradient-background {
       margin: 0;
